@@ -216,6 +216,7 @@ private:
 	bool recursive_add_directory;
 	bool automatically_get_info;
 	bool save_playlist_in_config;
+	bool play_files_from_start; 
 };
 
 
